<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rant.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.rant.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_custom"
        android:name="com.example.rant.ui.custom.CustomFragment"
        android:label="@string/title_custom"
        tools:layout="@layout/fragment_custom" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.rant.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.rant.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/newPostFragment"
        android:name="com.example.rant.ui.newPost.NewPostFragment"
        android:label="fragment_new_post"
        tools:layout="@layout/fragment_new_post" >
        <argument
            android:name="description"
            app:argType="string" />
        <argument
            android:name="image"
            app:argType="string" />
        <argument
            android:name="Id"
            app:argType="string" />
        <argument
            android:name="likes"
            app:argType="integer" />
        <argument
            android:name="isDeleted"
            app:argType="boolean" />
    </fragment>
    <action android:id="@+id/action_global_newPostFragment" app:destination="@id/newPostFragment" />
</navigation>